<resources>
    <string name="app_name">PetClinic</string>
    <string name="manage_pets">Manage Pets</string>
    <string name="manage_appointments">Manage Appointments</string>
    <string name="register_pet">Register Pet</string>
    <string name="register_appointments">Register Appointment</string>
    <string name="name">Name</string>
    <string name="birthday">Birthday</string>
    <string name="select_pet_picture">Select pet picture</string>
    <string name="appointment_date">Appointment Date</string>
    <string name="delete_pet">Delete Pet</string>
    <string name="edit_pet">Edit Pet</string>
    <string name="welcome">Welcome!</string>
    <string name="start_menu_instruction">Touch the paw to proceed...</string>
    <string name="cat">Cat</string>
    <string name="dog">Dog</string>
</resources>